added icon to listheader merged code

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -53,9 +53,12 @@
             <button id="omniSearchButton">Quickly find notes, search for tags...</button>
             <button id="btnDuplicateWindow"></button>
         </div>
-        <div id="cardContainer">
-            <div id="cardsListContainer" class="container lg:w-2/3 mx-auto">
-                <h1 id="cardsHeader"></h1>
+        <div id="listArea">
+            <div id="listAreaContainer" class="w-full max-w-[68rem] mx-auto">
+                <div id="listHeader">
+                    <span class="icon"></span>
+                    <h1 id="listTitle"></h1>
+                </div>
                 <ul id="cardsList"></ul>
                 <div id="creationTip" class="hidden">Press Cmd / Ctrl + N to create a new card</div>
                 <div id="endTip" class="hidden">You have reached the end of it all!</div>
