--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -48,10 +48,12 @@
     </div>
     <div id="overlay" class="fixed inset-0 z-20 hidden"></div>
     <div id="main" class="md:pl-64">
-        <div id="mainNav" class="fixed w-full md:ml-64 inset-x-0 z-10">
-            <button id="btnSideNav" class="md:hidden"></button>
-            <button id="omniSearchButton">Quickly find notes, search for tags...</button>
-            <button id="btnDuplicateWindow"></button>
+        <div id="topBar" class="fixed pt-10 md:pt-[0.4rem] md:ml-64 inset-x-0 z-10">
+            <button id="btnSideNav" class="md:hidden absolute left-2 bottom-0"></button>
+            <div id="topBarContainer" class="w-full max-w-[68rem] mx-auto">
+                <button id="omniSearchButton" class="w-full">Quickly find notes, search for tags...</button>
+            </div>
+            <button id="btnDuplicateWindow" class="absolute right-2 bottom-0"></button>
         </div>
         <div id="listArea">
             <div id="listAreaContainer" class="w-full max-w-[68rem] mx-auto">
