basic for card item headerbar

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -84,12 +84,23 @@
                     <span class="itemCreateTime"></span> · 
                     <span class="itemUpdateTime"></span>
                 </div>
-                <span class="itemMenu">...</span>
-            </div>
-            <div class="itemMenuOptions hidden">
-                <a class="editOption" href="#">Edit</a>
-                <a class="deleteOption" href="#">Delete</a>
-                <a class="restoreOption hidden" href="#">Restore</a>
+                <div class="itemMenuContainer">
+                    <span class="itemMenu"></span>
+                    <div class="itemMenuOptions hidden">
+                        <div class="editOption">
+                            <span class="icon"></span>
+                            <span class="label">Edit</span>
+                        </div>
+                        <div class="deleteOption">
+                            <span class="icon"></span>
+                            <span class="label">Delete</span>
+                        </div>
+                        <div class="restoreOption hidden">
+                            <span class="icon"></span>
+                            <span class="label">Restore</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="itemBody">
