--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="itemBody">
-            <div class="content markdown-body"></div>
+            <div class="content richtext"></div>
             <div class="itemControlPanel hidden"> 
                 <button class="btnUpdateCard">Save</button>
                 <button class="btnCancelCard">Cancel</button>
@@ -118,5 +118,4 @@
 <script  src="./codemirror/show-hint.js"></script>
 <script  src="./codemirror/emacs.js"></script>
 <script type="module" src="./index.js"></script>
-
 </html>
