add markdown revert:all

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="itemBody">
-            <div class="content richtext"></div>
+            <div class="content richtext markdown-body"></div>
             <div class="itemControlPanel hidden"> 
                 <button class="btnUpdateCard">Save</button>
                 <button class="btnCancelCard">Cancel</button>
