revert back to using github-markdown-light.css

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -70,6 +70,14 @@
                     <span class="icon"></span>
                     <h1 id="listTitle"></h1>
                 </div>
+                <div id="newItem">
+                    <div id="newItemEditor">
+
+                    </div>
+                    <div id="newItemCtrlPanel">
+
+                    </div>
+                </div>
                 <ul id="cardsList"></ul>
                 <div id="creationTip" class="hidden">Press Cmd / Ctrl + N to create a new card</div>
                 <div id="endTip" class="hidden">You have reached the end of it all!</div>
@@ -104,8 +112,8 @@
             </div>
         </div>
         <div class="itemBody">
-            <div class="content richtext markdown-body"></div>
-            <div class="itemControlPanel hidden"> 
+            <div class="content markdown-body"></div>
+            <div class="itemCtrlPanel hidden"> 
                 <button class="btnUpdateCard">Save</button>
                 <button class="btnCancelCard">Cancel</button>
             </div>
