--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -10,7 +10,7 @@
     <title>Slippod</title>
 </head>
 <body>
-    <div id="sideNav" class="hidden md:block h-screen select-none fixed z-30">
+    <div id="sideNav" class="hidden md:block h-screen select-none fixed z-50">
         <div id="sideNavContainer">
             <ul id="sideNavUl">
                 <li>
@@ -46,13 +46,13 @@
             <button id="appSettings" class="absolute right-2"></button>
         </div>
     </div>
-    <div id="overlay" class="fixed inset-0 z-20 hidden"></div>
+    <div id="overlay" class="fixed inset-0 z-40 hidden"></div>
     <div id="main" class="md:pl-64">
         <div id="topBar" class="fixed pt-10 md:pt-[0.4rem] md:ml-64 inset-x-0 z-10">
-            <button id="btnSideNav" class="md:hidden absolute left-2 bottom-0"></button>
+            <button id="btnSideNav" class="md:hidden absolute left-2 bottom-0 z-20"></button>
             <div id="topBarContainer" class="w-full max-w-[68rem] mx-auto">
                 <button id="omniSearchButton" class="w-full">Quickly find notes, search for tags...</button>
-                <div id="omniSearch" class="w-full max-w-[68rem] z-40 hidden">
+                <div id="omniSearch" class="w-full max-w-[68rem] z-30 hidden">
                     <div id="omniSearchContainer">
                         <input type="text" id="searchBox" class="w-full" placeholder="Quickly find notes, search for tags...">
                         <div id="suggestionBox" class="hidden">
@@ -62,7 +62,7 @@
                     </div>
                 </div>
             </div>
-            <button id="btnDuplicateWindow" class="absolute right-2 bottom-0"></button>
+            <button id="btnDuplicateWindow" class="absolute right-2 bottom-0 z-20"></button>
         </div>
         <div id="listArea">
             <div id="listAreaContainer" class="w-full max-w-[68rem] mx-auto">
