detailwindow css style with js and html changes

--- a/resource/app/detail.html
+++ b/resource/app/detail.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
+    <div id="detailWinHeaderBar"><span id="headerBarTitle"></span></div>
+    <div id="detailWinWrapper" class="w-full max-w-[40rem] mx-auto">
+        <div id="mainCardArea"></div>
+        <div id="linkedCardsArea">
+            <div id="linkedCardsHeader"><span id="linkedCardsCount"></span></div>
+            <div id="linkedCards"></div>
+        </div>
+    </div>
     <template id="cardTemplate">
         <div class="cardContainer">
             <div class="itemHeader">
