sidenav scroll optimization

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -41,7 +41,7 @@
             </ul>
             <ul id="tagsList"></ul>
         </div>
-        <div id="featureDock" class="absolute bottom-0">
+        <div id="featureDock">
             <button id="publisher" class="absolute left-2"></button>
             <button id="appSettings" class="absolute right-2"></button>
         </div>
