codemirror editor in card display refactor commit 1

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./codemirror/codemirror.css" />
     <link rel="stylesheet" href="./codemirror/show-hint.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Slippod</title>
 </head>
 <body>
@@ -112,7 +112,7 @@
             </div>
         </div>
         <div class="itemBody">
-            <div class="content markdown-body"></div>
+            <div class="content"></div>
             <div class="itemCtrlPanel hidden"> 
                 <button class="btnUpdateCard">Save</button>
                 <button class="btnCancelCard">Cancel</button>
@@ -121,6 +121,7 @@
     </template>
 </body>
 <script  src="./codemirror/codemirror.js"></script>
+<script  src="./codemirror/autorefresh.js"></script>
 <script  src="./codemirror/overlay.js"></script>
 <script  src="./codemirror/codemirror_markdown.js"></script>
 <script  src="./codemirror/show-hint.js"></script>
