--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -114,8 +114,7 @@
         <div class="itemBody">
             <div class="content"></div>
             <div class="itemCtrlPanel hidden"> 
-                <button class="btnCancelCard">Cancel</button>
-                <button class="btnUpdateCard">Save</button>
+                <button class="btnCancelCard"><span class="label">Cancel</span></button><button class="btnUpdateCard"><span class="icon"></span></button>
             </div>
         </div>
     </template>
