added a placeholder to item editor

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -72,10 +72,8 @@
                 </div>
                 <div id="newItem">
                     <div id="newItemEditor">
-
                     </div>
-                    <div id="newItemCtrlPanel">
-
+                    <div class="itemCtrlPanel"> 
                     </div>
                 </div>
                 <ul id="cardsList"></ul>
