--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -18,6 +18,7 @@
                         <div class="tagClick"  href="/tag_all" id="allCards">
                             <span class="icon"></span>
                             <span class="label">All Cards</span>    
+                            <span class="count"></span>
                         </div>
                     </div>
                 </li>
@@ -27,6 +28,7 @@
                         <div class="tagClick"  href="/tag_no" id="noTag">
                             <span class="icon"></span>
                             <span class="label">Untagged</span>    
+                            <span class="count"></span>
                         </div>
                     </div>
                 </li>
@@ -35,6 +37,7 @@
                         <div class="tagClick"  href="/tag_trash" id="trashCards">
                             <span class="icon"></span>
                             <span class="label">Trash</span>    
+                            <span class="count"></span>
                         </div>
                     </div>
                 </li>
