replace copy paste to system. support @ and # highlight in editor

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -126,6 +126,7 @@
 <script  src="./codemirror/autorefresh.js"></script>
 <script  src="./codemirror/overlay.js"></script>
 <script  src="./codemirror/codemirror_markdown.js"></script>
+<script  src="./codemirror/gfm.js"></script>
 <script  src="./codemirror/show-hint.js"></script>
 <script  src="./codemirror/emacs.js"></script>
 <script type="module" src="./index.js"></script>
