added list count style to sidenav

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -16,8 +16,10 @@
                 <li>
                     <div class="tagContainer">
                         <div class="tagClick"  href="/tag_all" id="allCards">
-                            <span class="icon"></span>
-                            <span class="label">All Cards</span>    
+                            <div class="left-group">
+                                <span class="icon"></span>
+                                <span class="label">All Cards</span>  
+                            </div>
                             <span class="count"></span>
                         </div>
                     </div>
@@ -26,8 +28,10 @@
                 <li>
                     <div class="tagContainer">
                         <div class="tagClick"  href="/tag_no" id="noTag">
-                            <span class="icon"></span>
-                            <span class="label">Untagged</span>    
+                            <div class="left-group">
+                                <span class="icon"></span>
+                                <span class="label">Untagged</span>
+                            </div>
                             <span class="count"></span>
                         </div>
                     </div>
@@ -35,8 +39,10 @@
                 <li>
                     <div class="tagContainer">
                         <div class="tagClick"  href="/tag_trash" id="trashCards">
-                            <span class="icon"></span>
-                            <span class="label">Trash</span>    
+                            <div class="left-group">
+                                <span class="icon"></span>
+                                <span class="label">Trash</span>
+                            </div>    
                             <span class="count"></span>
                         </div>
                     </div>
