card action menu hover disappear issue fix

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="itemMenuContainer">
                     <span class="itemMenu"></span>
-                    <div class="itemMenuOptions hidden">
+                    <div class="itemMenuOptions z-30 hidden">
                         <div class="editOption">
                             <span class="icon"></span>
                             <span class="label">Edit</span>
