bugfixes and improvements

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -88,8 +88,8 @@
                     </div>
                 </div>
                 <ul id="cardsList"></ul>
-                <div id="creationTip" class="hidden">Press Cmd / Ctrl + N to create a new card</div>
-                <div id="endTip" class="hidden">You have reached the end of it all!</div>
+                <div id="creationTip" class="hidden"></div>
+                <div id="endTip" class="hidden">You have reached the end...</div>
             </div>
         </div>
     </div>
