added a splash screen

--- a/resource/app/index.html
+++ b/resource/app/index.html
@@ -10,6 +10,7 @@
     <title>Slippod</title>
 </head>
 <body>
+    <div id="splashScreen">Loading your Slippod...</div>
     <div id="sideNav" class="hidden md:block h-screen select-none fixed z-50">
         <div id="sideNavContainer">
             <ul id="sideNavUl">
