提交注册码注册机制

--- a/packages/renderer/register.html
+++ b/packages/renderer/register.html
@@ -16,6 +16,6 @@
         </form>
         <p id="message"></p>
     </div>
-    <script src="./src/register.js"></script>
+    <script type="module" src="./src/register.js"></script>
 </body>
 </html>
