--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -88,7 +88,13 @@
                         <!-- <button class="btnCancelNewCard"><span class="label">Cancel</span></button> --><button class="btnCreateNewCard" disabled><span class="icon"></span></button>
                     </div>
                 </div>
-                <ul id="cardsList"></ul>
+                <ul id="cardsList">
+                </ul>
+                <div class="notificationBar">
+                    <button class="closeBtn">×</button>
+                    <span class="text">Trial version expires in 14 days</span>
+                    <button class="unlockBtn">Unlock</button>
+                </div>
                 <div id="creationTip" class="hidden"></div>
                 <div id="endTip" class="hidden">You have reached the end...</div>
             </div>
