commit new project organization

--- a/src/renderer/detail.html
+++ b/src/renderer/detail.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Note Details</title>
-    <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
     <div id="detailWinHeaderBar"><span id="headerBarTitle"></span></div>
@@ -46,5 +46,5 @@
         </div>
     </template>
 </body>
-<script type="module" src="./src/detail.js"></script>
+<script type="module" src="./js/detail.js"></script>
 </html>
