--- a/src/renderer/register.html
+++ b/src/renderer/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>License Registration</title>
-    <link rel="stylesheet" href="./src/register.css">
+    <link rel="stylesheet" href="./css/register.css">
 </head>
 <body>
     <div class="container">
@@ -30,7 +30,7 @@
             <input id="licenseKeyInput" value="I8RwkeHFHBAN+toitV115zR55UCG1IP+6yjCpLEr+hA" readonly>
         </div>
     </div>
-    <script type="module" src="./src/register.js"></script>
+    <script type="module" src="./js/register.js"></script>
 
 </body>
 </html>
