--- a/src/renderer/setting.html
+++ b/src/renderer/setting.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="./src/style.css" />
+  <link rel="stylesheet" href="./css/style.css" />
   <title>Settings</title>
 </head>
 <body>
