--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/codemirror/codemirror.css" />
     <link rel="stylesheet" href="/codemirror/show-hint.css" />
-    <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Slippod</title>
 </head>
 <body>
@@ -142,5 +142,5 @@
 <script  src="/codemirror/gfm.js"></script>
 <script  src="/codemirror/show-hint.js"></script>
 <script  src="/codemirror/emacs.js"></script>
-<script type="module" src="./src/index.js"></script>
+<script type="module" src="./js/index.js"></script>
 </html>
