--- a/src/renderer/license.html
+++ b/src/renderer/license.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your License</title>
-    <link rel="stylesheet" href="./src/license.css">
+    <link rel="stylesheet" href="./css/license.css">
 </head>
 <body>
     <div class="container">
@@ -47,6 +47,6 @@
             </div>
         </div>
     </div>
-    <script type="module" src="./src/license.js"></script>
+    <script type="module" src="./js/license.js"></script>
 </body>
 </html>
