my license window set up

--- a/src/renderer/license.html
+++ b/src/renderer/license.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./css/license.css">
 </head>
 <body>
-    <div class="container">
-        <div id="registerForm" class="form">
+    <div id="myLicense">
+        <div id="registerForm" class="form hidden">
             <div class="formBody">
                 <div class="formField">
                     <div class="fieldHeader">
@@ -25,6 +25,9 @@
             </div>
         </div>
         <div id="licenseInfo" class="form hidden">
+            <div class="formHeader">
+                <p class="formHeaderDesc">Reach out to <a href="mailto:support@slippod.com">support@slippod.com</a> if you have any questions about your license.</p>
+            </div>
             <div class="formBody">
                 <div class="formField">
                     <div class="fieldHeader">
