--- a/src/renderer/license.html
+++ b/src/renderer/license.html
@@ -7,49 +7,7 @@
     <link rel="stylesheet" href="./css/license.css">
 </head>
 <body>
-    <div id="myLicense">
-        <div id="registerForm" class="form hidden">
-            <div class="formBody">
-                <div class="formField">
-                    <div class="fieldHeader">
-                        <p class="fieldDesc">Enter your license key below. You can purchase one from <a href="https://www.slippod.com/pricing">https://www.slippod.com/pricing</a></p>
-                    </div>
-                    <div class="fieldInput">
-                        <input id="licenseInput" type="text" placeholder="Enter license key">
-                        <p class="inputError"></p>
-                    </div>
-                </div>
-            </div>
-            <div class="formCtrlBar">
-                <button id="submitLicenseBtn" disabled>Use License</button>
-            </div>
-        </div>
-        <div id="licenseInfo" class="form hidden">
-            <div class="formHeader">
-                <p class="formHeaderDesc">Reach out to <a href="mailto:support@slippod.com">support@slippod.com</a> if you have any questions about your license.</p>
-            </div>
-            <div class="formBody">
-                <div class="formField">
-                    <div class="fieldHeader">
-                        <label for="emailInput">Email Address:</label>
-                    </div>
-                    <div class="fieldInput">
-                        <input id="emailInput" value="" readonly>
-                        <p class="inputError"></p>
-                    </div>
-                </div>
-                <div class="formField">
-                    <div class="fieldHeader">
-                        <label for="licenseKeyInput">License Code:</label>
-                    </div>
-                    <div class="fieldInput">
-                        <input id="licenseKeyInput" value="" readonly>
-                        <p class="inputError"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div id="licenseWindow"></div>
     <script type="module" src="./js/license.js"></script>
 </body>
 </html>
