changed to use color variables and refactored sidenav colors

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -18,8 +18,7 @@
                     <div class="tagContainer">
                         <div class="tagClick"  href="/tag_all" id="allCards">
                             <div class="left-group">
-                                <span class="icon"></span>
-                                <span class="label">All Cards</span>  
+                                <span class="icon"></span><span class="label">All Cards</span>  
                             </div>
                             <span class="count"></span>
                         </div>
@@ -30,8 +29,7 @@
                     <div class="tagContainer">
                         <div class="tagClick"  href="/tag_no" id="noTag">
                             <div class="left-group">
-                                <span class="icon"></span>
-                                <span class="label">Untagged</span>
+                                <span class="icon"></span><span class="label">Untagged</span>
                             </div>
                             <span class="count"></span>
                         </div>
@@ -41,8 +39,7 @@
                     <div class="tagContainer">
                         <div class="tagClick"  href="/tag_trash" id="trashCards">
                             <div class="left-group">
-                                <span class="icon"></span>
-                                <span class="label">Trash</span>
+                                <span class="icon"></span><span class="label">Trash</span>
                             </div>    
                             <span class="count"></span>
                         </div>
@@ -52,8 +49,8 @@
             <ul id="tagsList"></ul>
         </div>
         <div id="featureDock">
-            <button id="publisher" class="absolute left-2"></button>
-            <button id="appSettings" class="absolute right-2"></button>
+            <div class="btnContainer publisherBtn"><button id="publisherBtn"></button></div><div class="btnContainer appSettingsBtn"><button id="appSettingsBtn"></button>
+            </div>
         </div>
     </div>
     <div id="overlay" class="fixed inset-0 z-40 hidden"></div>
