--- a/src/renderer/setting.html
+++ b/src/renderer/setting.html
@@ -15,7 +15,7 @@
             class="flex-grow py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-gray-500">
             /path/to/database</p>
           <button id="filePicker"
-            class="px-4 py-2 mt-0 font-bold text-white bg-blue-500 hover:bg-blue-700 rounded-r focus:outline-none">Browse</button>
+            class="px-4 py-2 mt-0 font-bold text-white rounded-r focus:outline-none">Browse</button>
         </div>
       </div>
       <!-- Other settings go here -->
