--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -56,9 +56,9 @@
     <div id="overlay" class="fixed inset-0 z-40 hidden"></div>
     <div id="main" class="md:pl-64">
         <div id="topBar" class="fixed pt-10 md:pt-[0.4rem] md:ml-64 inset-x-0 z-10">
-            <button id="btnSideNav" class="md:hidden absolute left-2 bottom-0 z-20"></button>
+            <button id="btnSideNav" class="md:hidden"></button>
             <div id="topBarContainer" class="w-full max-w-[68rem] mx-auto">
-                <button id="omniSearchButton" class="w-full">Quickly find notes, search for tags...</button>
+                <button id="omniSearchButton" class="w-full"><span class="icon"></span><span class="label">Quickly find notes, search for tags...</span></button>
                 <div id="omniSearch" class="w-full max-w-[68rem] z-30 hidden">
                     <div id="omniSearchContainer">
                         <input type="text" id="searchBox" class="w-full" placeholder="Quickly find notes, search for tags...">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <button id="btnDuplicateWindow" class="absolute right-2 bottom-0 z-20"></button>
+            <button id="btnDuplicateWindow"></button>
         </div>
         <div id="listArea">
             <div id="listAreaContainer" class="w-full max-w-[68rem] mx-auto">
@@ -104,16 +104,13 @@
                     <span class="itemMenu"></span>
                     <div class="itemMenuOptions z-30 hidden">
                         <div class="editOption">
-                            <span class="icon"></span>
-                            <span class="label">Edit</span>
+                            <span class="icon"></span><span class="label">Edit</span>
                         </div>
                         <div class="deleteOption">
-                            <span class="icon"></span>
-                            <span class="label">Delete</span>
+                            <span class="icon"></span><span class="label">Delete</span>
                         </div>
                         <div class="restoreOption hidden">
-                            <span class="icon"></span>
-                            <span class="label">Restore</span>
+                            <span class="icon"></span><span class="label">Restore</span>
                         </div>
                     </div>
                 </div>
