settings and publishing buttons

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -49,8 +49,16 @@
             <ul id="tagsList"></ul>
         </div>
         <div id="featureDock">
-            <div class="btnContainer publisherBtn"><button id="publisherBtn"></button></div><div class="btnContainer appSettingsBtn"><button id="appSettingsBtn"></button>
+            <div class="btnContainer">
+                <button id="publisherBtn"><label class="icon"></label></button>
+                <div id="publisherTooltip" class="tooltip">
+                    <div class="tooltipContainer">
+                      <div class="tooltipContent">This feature is currently under development.</div>
+                      <div class="tooltipArrow"></div>
+                    </div>
+                </div>
             </div>
+            <div class="btnContainer"><button id="appSettingsBtn"><label class="icon"></label></button></div>
         </div>
     </div>
     <div id="overlay" class="fixed inset-0 z-40 hidden"></div>
