added tooltip to publishing button to indicate it's in development and settings button to open settings window

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -50,15 +50,11 @@
         </div>
         <div id="featureDock">
             <div class="btnContainer">
-                <button id="publisherBtn"><label class="icon"></label></button>
-                <div id="publisherTooltip" class="tooltip">
-                    <div class="tooltipContainer">
-                      <div class="tooltipContent">This feature is currently under development.</div>
-                      <div class="tooltipArrow"></div>
-                    </div>
-                </div>
+                <button id="publisherBtn"><span class="icon"></span></button>
             </div>
-            <div class="btnContainer"><button id="appSettingsBtn"><label class="icon"></label></button></div>
+            <div class="btnContainer">
+                <button id="appSettingsBtn"><span class="icon"></span></button>
+            </div>
         </div>
     </div>
     <div id="overlay" class="fixed inset-0 z-40 hidden"></div>
